Modifs mineures menu

--- a/Inspiration.html
+++ b/Inspiration.html
@@ -17,7 +17,7 @@
 <body>
 
     <header class="menu">
-    <a class="logo" href="Index.html">Géonirisme</a>         
+    <a class="logo" href="index.html">Géonirisme</a>         
     <nav class="nav">
         <ul class="nav-list"> 
             <li><a href="demarche.html">Démarches</a></li>   
