--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -17,10 +17,10 @@
 <body>
 
   <header class="menu">
-    <a class="logo" href="Index.html">Géonirisme</a>         
+    <a class="logo" href="index.html">Géonirisme</a>         
     <nav class="nav">
       <ul class="nav-list"> 
-        <li><a href="Demarche.html">Démarches</a></li>   
+        <li><a href="demarche.html">Démarches</a></li>   
         <li><a href="Oeuvres.html">Œuvres</a></li> 
         <li><a href="Inspiration.html">Inspiration</a></li>
         <li><a href="Contact.html">Contact</a></li>
