--- a/demarche.html
+++ b/demarche.html
@@ -20,7 +20,7 @@
     <a class="logo" href="index.html">Géonirisme</a>         
     <nav class="nav">
       <ul class="nav-list"> 
-        <li><a href="demarche.html">Démarches</a></li>   
+        <li><a href="demarche.html">Démarche</a></li>   
         <li><a href="Oeuvres.html">Œuvres</a></li> 
         <li><a href="Inspiration.html">Inspiration</a></li>
         <li><a href="Contact.html">Contact</a></li>
