Ajout image artiste

--- a/Contact.html
+++ b/Contact.html
@@ -30,9 +30,17 @@
 
   <main>
 
-    <!-- Photo à ajouter / ça permettra d'occuper plus d'espace sur la page et de décaler le footer vers le bas -->
-
+   
     <h1>Contact</h1>
+    
+    <div class="image-artiste">
+    <figure>
+      <img class="image1" src="PhotoArtistePetit.jpg" alt="Oeuvre Cécile Ronc">
+      <figcaption class="caption">Cécile R.</figcaption>
+    </figure>
+  </div>
+
+  
 
     <p>Cécile R. est aquarelliste. Depuis son obtention du diplôme des Beaux-Arts de Paris en 2006, elle peint et expose, entre Montréal, Vancouver et Paris.</p>
 
