--- a/Contact.html
+++ b/Contact.html
@@ -44,7 +44,7 @@
 
     <p>Cécile R. est aquarelliste. Depuis son obtention du diplôme des Beaux-Arts de Paris en 2006, elle peint et expose, entre Montréal, Vancouver et Paris.</p>
 
-    <p>Elle prépare une thèse en recherche-création à l’Université du Québec à Montréal (UQAM). Son intitulé, « Géonirisme : lieu privilégié de co-naissances au monde et à soi dans l’acte de peindre », se fonde sur un néologisme de son cru. Le « géonirisme » sous-tend l’idée d’une affectation du corps par « la nature autour de nous », par les rêveries de la terre. Cécile Ronc entend par là l’exploration des liens pouvant se nouer entre les qualités sensibles de la nature et leur résonance en nous.</p>
+    <p>Elle prépare une thèse en recherche-création à l’Université du Québec à Montréal (UQAM). Son intitulé, «&nbsp;Géonirisme&nbsp;: lieu privilégié de co-naissances au monde et à soi dans l’acte de peindre&nbsp;», se fonde sur un néologisme de son cru. Le «&nbsp;géonirisme&nbsp;» sous-tend l’idée d’une affectation du corps par «&nbsp;la nature autour de nous&nbsp;», par les rêveries de la terre. Cécile Ronc entend par là l’exploration des liens pouvant se nouer entre les qualités sensibles de la nature et leur résonance en nous.</p>
 
     <p>Cette thématique se déploie dans sa peinture, sous-tend sa réflexion sur son œuvre.</p>
 
